// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changing state in render should fail 1`] = `
<div>
  <div>
    4
  </div>
</div>
`;

exports[`changing state in render should fail 2`] = `
<div>
  <div>
    4
  </div>
</div>
`;

exports[`issue 12 init state is correct 1`] = `
<div>
  <div>
    <span>
      coffee
      !
    </span>
    <span>
      tea
    </span>
  </div>
</div>
`;

exports[`issue 12 init state is correct 2`] = `
<div>
  <div>
    <span>
      coffee
      !
    </span>
    <span>
      tea
    </span>
  </div>
</div>
`;

exports[`issue 12 run transaction 1`] = `
<div>
  <div>
    <span>
      soup
    </span>
  </div>
</div>
`;

exports[`issue 12 run transaction 2`] = `
<div>
  <div>
    <span>
      soup
    </span>
  </div>
</div>
`;
